archive/__before_move/old/_very_old/dokuwiki/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: development
  name: dokuwiki
spec:
  selector:
    matchLabels:
      app: dokuwiki
  replicas: 1
  template:
    metadata:
      labels:
        app: dokuwiki
    spec:
      containers:
        - name: dokuwiki
          image: ghcr.io/linuxserver/dokuwiki:2020-07-29-ls83
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
            limits:
              cpu: 500m
              memory: 200Mi
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /config
              name: dokuwiki-data
      volumes:
        - name: dokuwiki-data
          persistentVolumeClaim:
            claimName: dokuwiki-data-pvc
