archive/__before_move/old/_very_old/dokuwiki/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: development
  labels:
    app: dokuwiki
  name: dokuwiki
  annotations:
    kubernetes.io/ingress.class: nginx
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: ${SECRET_DNS_TARGET}
    traefik.ingress.kubernetes.io/router.middlewares: networking-forwardauth-authelia@kubernetescrd
    hajimari.io/enable: "true"
    hajimari.io/icon: file-document-edit
spec:
  tls:
    - secretName: ${SECRET_DOMAIN_ME//./-}-tls
      hosts:
        - wiki.${SECRET_DOMAIN_ME}
  rules:
    - host: wiki.${SECRET_DOMAIN_ME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dokuwiki
                port:
                  number: 80
